--- a/APITecsup_laboratorio13/APITecsup_laboratorio13.csproj
+++ b/APITecsup_laboratorio13/APITecsup_laboratorio13.csproj
@@ -164,12 +164,15 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PeopleController.cs" />
+    <Compile Include="Controllers\ProductsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Request\PersonRequest.cs" />
+    <Compile Include="Models\Request\ProductRequest.cs" />
     <Compile Include="Models\Response\PersonResponse.cs" />
+    <Compile Include="Models\Response\ProductResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -226,6 +229,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\People\" />
+    <Folder Include="Views\Products\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
