--- a/Infraestructure/Infraestructure.csproj
+++ b/Infraestructure/Infraestructure.csproj
@@ -57,6 +57,14 @@
     <Compile Include="Migrations\202206260401597_v1_create_people.designer.cs">
       <DependentUpon>202206260401597_v1_create_people.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206280314153_v2.cs" />
+    <Compile Include="Migrations\202206280314153_v2.designer.cs">
+      <DependentUpon>202206280314153_v2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202206280323572_v3.cs" />
+    <Compile Include="Migrations\202206280323572_v3.designer.cs">
+      <DependentUpon>202206280323572_v3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -73,6 +81,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202206260401597_v1_create_people.resx">
       <DependentUpon>202206260401597_v1_create_people.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206280314153_v2.resx">
+      <DependentUpon>202206280314153_v2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206280323572_v3.resx">
+      <DependentUpon>202206280323572_v3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
